omtp/.metadata/.plugins/org.eclipse.cdt.ui/hamn.build.log
13:08:04 **** Incremental Build of configuration gcc-debug for project hamn ****
make MODE=debug CONFIGNAME=gcc-debug all 
cd src && make
make[1]: Entering directory '/home/sandro/projects/vitiv6/omtp/hamn/src'
MobileNode.cc
MobileNode.cc: In member function ‘void MobileNode::handleSolicitation(hamn_msg*)’:
MobileNode.cc:108:29: error: too few arguments to function ‘time_t time(time_t*)’
         adv_recieved = time();
                             ^
In file included from /usr/include/pthread.h:24:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/gthr-default.h:35,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/gthr.h:148,
                 from /usr/include/c++/4.8/ext/atomicity.h:35,
                 from /usr/include/c++/4.8/bits/ios_base.h:39,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from /home/sandro/projects/omnetpp-4.4.1/include/cownedobject.h:22,
                 from /home/sandro/projects/omnetpp-4.4.1/include/carray.h:23,
                 from /home/sandro/projects/omnetpp-4.4.1/include/omnetpp.h:21,
                 from ../src/MobileNode.h:19,
                 from MobileNode.cc:16:
/usr/include/time.h:192:15: note: declared here
 extern time_t time (time_t *__timer) __THROW;
               ^
MobileNode.cc: In member function ‘void MobileNode::handleError(hamn_msg*)’:
MobileNode.cc:133:45: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
             for(int i = 0; i < BU_list.size(); i++)
                                             ^
MobileNode.cc:153:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         for(int i = 0; i < BU_list.size(); i++)
                                         ^
MobileNode.cc: In member function ‘void MobileNode::checkAdvertisment()’:
MobileNode.cc:210:14: error: too few arguments to function ‘time_t time(time_t*)’
     if (time() - adv_recieved > prefix_adv_timeout) {
              ^
In file included from /usr/include/pthread.h:24:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/gthr-default.h:35,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/gthr.h:148,
                 from /usr/include/c++/4.8/ext/atomicity.h:35,
                 from /usr/include/c++/4.8/bits/ios_base.h:39,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
Makefile:94: recipe for target '../out/gcc-debug/src/MobileNode.o' failed
                 from /home/sandro/projects/omnetpp-4.4.1/include/cownedobject.h:22,
                 from /home/sandro/projects/omnetpp-4.4.1/include/carray.h:23,
                 from /home/sandro/projects/omnetpp-4.4.1/include/omnetpp.h:21,
                 from ../src/MobileNode.h:19,
make[1]: Leaving directory '/home/sandro/projects/vitiv6/omtp/hamn/src'
                 from MobileNode.cc:16:
/usr/include/time.h:192:15: note: declared here
 extern time_t time (time_t *__timer) __THROW;
               ^
Makefile:2: recipe for target 'all' failed
make[1]: *** [../out/gcc-debug/src/MobileNode.o] Error 1
make: *** [all] Error 2

13:08:05 Build Finished (took 664ms)

